@@ -3,3 +3,47 @@
 .ui-tabs-hide {
   display: none;
 }
+.ui-tabs {
+  padding: 0;
+}
+.ui-corner-all {
+  -moz-border-radius: 0;
+}
+.ui-widget-header,
+.ui-widget-content {
+  border: 0;
+}
+.ui-tabs .ui-tabs-nav li.ui-tabs-selected  {
+  padding-bottom: 0;
+}
+.ui-tabs .ui-tabs-nav li {
+  float: none;
+}
+.ui-state-active,
+.ui-widget-content .ui-state-active {
+  border: 0;
+}
+.ui-state-default, .ui-widget-content .ui-state-default {
+  border-bottom: 1px solid #d6dbde;
+  border-left: 0;
+  border-right: 0;
+  border-top: 0;
+}
+.ui-corner-top {
+  -moz-border-radius-topleft: 0;
+  -moz-border-radius-topright: 0;
+}
+.ui-tabs .ui-tabs-nav li a {
+  float: none;
+}
+.ui-widget {
+  font-family: inherit;
+  font-size: inherit;
+}
+.ui-widget input,
+.ui-widget select,
+.ui-widget textarea,
+.ui-widget button {
+  font-family: Verdana, Arial, sans-serif;
+  font-size: inherit;
+}
