@@ -251,8 +251,13 @@ files[] = theme/views-view-table.tpl.php
 files[] = theme/views-view-unformatted.tpl.php
 files[] = theme/views-view.tpl.php
 ; Tests
-files[] = tests/views_query.test
-files[] = tests/views_groupby.test
-files[] = tests/views_pager.test
-files[] = tests/views_glossary.test
+files[] = tests/views_access.test
+files[] = tests/views_argument_default.test
+files[] = tests/views_argument_validator.test
 files[] = tests/views_exposed_form.test
+files[] = tests/views_glossary.test
+files[] = tests/views_groupby.test
+files[] = tests/views_handlers.test
+files[] = tests/views_pager.test
+files[] = tests/views_query.test
+
