@@ -151,6 +151,8 @@ Views 3.x-7.x-dev
     o #508124 by dereine: "accept_null" should have been "accept null" in boolean filter definitions.
     o #513396 by yhager: Attempt multi-byte safety for "trim at word boundary" setting.
     o #692970 by dereine: Missing jump menu definition
+    o #739448 by brunodbo: Allow "Jump Menu" to set the "Choose" text in style options.
+    o #721358 by dereine: Unable to select "Limit list to selected items." With tests.
 
 Views 6.x-3.x-dev
     o #396380 by merlinofchaos, dereine and dagmar: Initial support for GROUP BY queries!!!!!!!!!!!!
